<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
    <!-- Please refer to http://oxford-portal.azurewebsites.net/doc/general/subscription-key-mgmt to get your subscription key -->
    <!-- If you have one subscription key, you can add it here to use the service -->
    <string name="primaryKey">6f8fed942d4b46f09e8db0128d7e7e76</string>
    <string name="add_subscription_key_tip_title">Subscription Key is Needed</string>
    <string name="add_subscription_key_tip">Please put your subscription key to source file \"app/res/values/strings.xml\" to enable Speech API calls.</string>

    <!--
    Enter an optional authentication Uri such as:
    https://westus.api.cognitive.microsoft.com/sts/v1.0/issuetoken
    -->
    <string name="authenticationUri"></string>

    <string name="luisAppID">yourLuisAppID</string>
    <string name="luisSubscriptionID">yourLuisSubscriptionID</string>

    <string name="action_settings">Settings</string>

    <string name="app_name">Salad Servo Mover</string>

    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="left_slow">LEFT SLOW</string>
    <string name="left_fast">LEFT FAST</string>
    <string name="right_slow">RIGHT SLOW</string>
    <string name="right_fast">RIGHT FAST</string>
    <string name="bt_uuid">00001101-0000-1000-8000-00805F9B34FB</string>
    <string name="url_client">http://ssal.sparcs.org:8888/client?id=%d</string>
    <string name="url_server">http://ssal.sparcs.org:8888/server?status=%d</string>
    <string name="url_command_get">http://ssal.sparcs.org:8888/command?id=%d</string>
    <string name="url_command_post">http://ssal.sparcs.org:8888/command?id=%d\&amp;cmd=%d</string>
    <string name="command_unavailable">The command is not available now.</string>
    <string name="arduino_working">Arduino is working. Please wait.</string>

    <string name="start_button_single_text">Single Mode</string>
    <string name="start_button_client_text">Client Mode</string>
    <string name="start_button_server_text">Server Mode</string>

    <string name="server_dialog_getting">Getting an id from the server &#8230;</string>
    <string name="server_dialog_fail">Fail to get the id from the server.</string>

    <string name="client_dialog_verifying">Verifying the id from the server &#8230;</string>
    <string name="client_dialog_wrong">Wrong id!</string>

    <string name="instruction_default">Press below to START</string>
    <string name="instruction_clicked">Press below to STOP</string>

    <string name="bluetoothConnection_title_text">Connect to Device</string>
    <string name="bluetoothConnection_menu_discovery_title">Discover</string>
    <string name="bluetoothConnection_dialog_unable_msg">Bluetooth is not supported in your cellphone.</string>
    <string name="bluetoothConnection_dialog_off_msg">You cannot use this function if your bluetooth is turned off.</string>
    <string name="bluetoothConnection_dialog_noper_msg">You cannot use this function if coarse location permission is not allowed.</string>
    <string name="bluetoothConnection_dialog_connect_msg">Are you sure to connect to the device(%s)?</string>
    <string name="bluetoothConnection_dialog_fail_msg">Fail to connect to the device.</string>
    <string name="bluetoothConnection_dialog_connecting">Connecting to the device &#8230;</string>

    <string name="button_button_left_fast_text">Left-Fast</string>
    <string name="button_button_right_fast_text">Right-Fast</string>
    <string name="button_button_left_slow_text">Left-Slow</string>
    <string name="button_button_right_slow_text">Right-Slow</string>
    <string name="button_text_view_text">The degree is: %d</string>

    <string name="motion_textView_text">Shake your phone to the left or right to move.</string>
</resources>
