<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_button_left_fast"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/button_button_text_size"
            android:text="@string/button_button_left_fast_text" />

        <Button
            android:id="@+id/button_button_right_fast"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/button_button_text_size"
            android:text="@string/button_button_right_fast_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_button_left_slow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/button_button_text_size"
            android:text="@string/button_button_left_slow_text" />

        <Button
            android:id="@+id/button_button_right_slow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/button_button_text_size"
            android:text="@string/button_button_right_slow_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/button_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/button_text_view_margin"
        android:textSize="@dimen/button_text_view_text_size"/>
</LinearLayout>